Fix the following bugs. A top of blog title disappears a little bit at hover action. A height of profile photo in about page does not change automatically. A height of insert img in blogcontent page does not change automatically. Img height in share SNS part does not fit SNS buttons.

--- a/wp-theme/css/about.scss
+++ b/wp-theme/css/about.scss
@@ -150,7 +150,7 @@
     flex-direction: row-reverse;
     justify-content: space-between;
 
-    img {
+    &-fig {
       width: 50%;
     }
 
@@ -198,7 +198,7 @@
       flex-direction: column;
       max-width: (325/375)*100vw;
 
-      img {
+      &-fig {
         width: 80%;
         margin: 0 auto;
       }
