--- a/wp-theme/css/common/_blogli.scss
+++ b/wp-theme/css/common/_blogli.scss
@@ -37,6 +37,7 @@
   }
 
   a {
+    display: inline-block;
     color: $darkgray;
     transition: all 0.3s ease 0s;
 
